---
source: rs/client-gen-js/tests/generator.rs
expression: generated
---
import {GearApi, HexString} from "@gear-js/api";
import {ActorId, QueryBuilderWithHeader, TypeResolver} from "sails-js";
import {InterfaceId, SailsMessageHeader} from "sails-js-parser-idl-v2";

export class TypeNamesProgram {
    private _typeResolver: TypeResolver;
    constructor(
        public api: GearApi,
        private _programId?: `0x${string}`,
    ) {
        this._typeResolver = new TypeResolver([]);
    }

    private get registry() {
        return this._typeResolver.registry;
    }

    public get programId(): HexString {
        if (!this._programId) throw new Error("Program ID is not set");
        return this._programId;
    }

    public get typeNames(): TypeNames {
        return new TypeNames(this.api, this.programId, 1);
    }
}

export type Alias<T> = T;

export class TypeNames {
    private _typeResolver: TypeResolver;
    constructor(
        private _api: GearApi,
        private _programId: HexString,
        private _routeIdx: number = 0,
    ) {
        this._typeResolver = new TypeResolver([{"name":"Alias","type_params":[{"name":"T"}],"kind":"struct","fields":[{"type":{"kind":"generic","name":"T"}}]}]);
    }
    private get registry() {
        return this._typeResolver.registry;
    }
    public get interfaceId(): InterfaceId {
        return InterfaceId.from("0x13a669a6a51e0cdc");
    }
    public read(value: { ok: [number, ActorId][] } | { err: bigint } | null): QueryBuilderWithHeader<{ ok: Alias<number | null> } | { err: string }> {
        return new QueryBuilderWithHeader<{ ok: Alias<number | null> } | { err: string }>(
            this._api,
            this.registry,
            this._programId,
            SailsMessageHeader.v1(this.interfaceId, 0, this._routeIdx),
            value,
            this._typeResolver.getTypeDeclString({"kind":"named","name":"Option","generics":[{"kind":"named","name":"Result","generics":[{"kind":"slice","item":{"kind":"tuple","types":["u32","ActorId"]}},"u128"]}]}),
            this._typeResolver.getTypeDeclString({"kind":"named","name":"Result","generics":[{"kind":"named","name":"Alias","generics":[{"kind":"named","name":"Option","generics":["u32"]}]},"String"]}),
        );
    }
}
